# tariff_model

./: .env.example  .gitignore  Makefile  PROMPT.md  README.md  fix_plan.md  progress.json  pyproject.toml
docs/: feasibility_report.md
docs/decisions/: 0007-tariff-grain-and-aggregation.md  0008-tariff-non-additive-policy.md  0010-fact-time-relationship-matrix.md  0023-tariff-country-role-rewire.md  0101-drop-dim-tariff-detail.md
ref/report_layout_metrix/: business_csv_mapping.md  tariff_cn_800300_golden.csv  tariff_gb_800300_golden.csv  tariff_us_800300_golden.csv
scripts/: deploy_model.py  deploy_split_dev.py  fabric_dax_client.py  golden_compare.py  tmdl_lint.py  validate_split_live.py  wait_for_framing.py
semantic_model/itrade_tariff_model.SemanticModel/: .platform
semantic_model/itrade_tariff_model.SemanticModel/definition/: database.tmdl  expressions.tmdl  model.tmdl  perspectives.tmdl  (+1 more)
semantic_model/translations/: zh-TW.json
status/: phase_TSPLIT_report.json  tariff_deploy_evidence.json  tariff_split_validation.json
tests/: conftest.py
tests/tariff/: conftest.py  test_tariff_dims_tmdl.py  test_tariff_fact_tmdl.py  test_tariff_measures.py  test_tariff_non_additive_enforcement.py  test_tariff_perspective.py  test_tariff_rate_range.py  test_tariff_smoke_after_deploy.py
tests/unit/: _tmdl_helpers.py  test_dim_country_partner_tmdl.py  test_dim_country_tmdl.py  test_dim_hs_code_tmdl.py  test_dim_time_year_tmdl.py  test_model_perspective_consistency.py  test_partner_role_playing_relationships.py  test_tmdl_lint.py  test_tmdl_lint_tariff.py
(+6 files in other folders)
